[package]
name = "simple_tx_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sv = { git = "https://github.com/murphyj8/rust-sv.git"}
bitcoin = "0.29.2"
clap={version = "4.2.1", features=["derive"]}
toml="0.5.8"
serde = "1.0.136"
serde_derive = "1.0.136"
byteorder = "1.0"
chrono = "0.4.24"
hex = "0.4.3"

